// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled prop 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  background-color: #fff;
  border: 2px solid #007;
  color: #007;
  color: #b44;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 2px solid #667;
  color: #667;
  opacity: 0.5;
}

.c0:active {
  background-color: #44b;
  color: #44b;
  border-color: #44b;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  background-color: #ddd;
  color: #007;
}

.c0::before {
  content: 'Cancel';
}

<button
  className="sc-fznyAO sc-fznZeY c0"
  disabled={true}
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  background-color: #fff;
  border: 2px solid #007;
  color: #007;
  color: #b44;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 2px solid #667;
  color: #667;
  opacity: 0.5;
}

.c0:active {
  background-color: #44b;
  color: #44b;
  border-color: #44b;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  background-color: #ddd;
  color: #007;
}

.c0::before {
  content: 'Cancel';
}

<button
  className="sc-fznyAO sc-fznZeY c0"
/>
`;
